# nvfp4-quantization

./: .gitignore  EXECUTION_GUIDE.md  MODEL_CARD.md  QUICKSTART.md  README.md  check-status.sh  docker-run-vllm.sh  docker-run.sh  monitor-quantization.sh  pyproject.toml  start-vllm-server.sh  stop-vllm-server.sh
configs/: quantization_config.json
scripts/: 01_prepare_calibration_data.py  02_quantize_to_nvfp4.py  03_test_inference_vllm.py  04_benchmark.py  05_benchmark_bf16_vs_nvfp4.py  06_upload_to_huggingface.py
